modificacion y creacion de paginas

--- a/html/productos.html
+++ b/html/productos.html
@@ -13,20 +13,19 @@
 <!--fontawesome-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<link rel="stylesheet" href="css/index.css">
-<title>Mundo Literario</title>
+<link rel="stylesheet" href="../css/index.css">
+<title>Productos</title>
 </head>
 <body>
     <!--barra de navegacion-->
         <header class="d-flex flex-wrap align-items-center justify-content-center  py-3 mb-4 border-bottom">
-          <a href="Index.html" class="d-flex align-items-center col-md-2 mb-2 mb-md-0 text-dark text-decoration-none">
-            <img src="img/Logo.png" alt="Logo" width="50%">
+          <a href="../Index.html" class="d-flex align-items-center col-md-2 mb-2 mb-md-0 text-dark text-decoration-none">
+            <img src="../img/Logo.png" alt="Logo" width="50%">
           </a>
     
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="html/productos.html" class="nav-link px-2 link-dark">Productos<i class="fa-sharp fa-solid fa-cart-shopping"></i></i></a></li>
-            <li><a href="html/ventas.html" class="nav-link px-2 link-dark">Ventas<i class="fa-sharp fa-solid fa-cash-register"></i></a></li>
-            <li><a href="html/inventario.html" class="nav-link px-2 link-dark">Inventario<i class="fa-sharp fa-solid fa-list"></i></a></li>
+            <li><a href="../html/ventas.html" class="nav-link px-2 link-dark">Ventas<i class="fa-sharp fa-solid fa-cash-register"></i></a></li>
+            <li><a href="../html/inventario.html" class="nav-link px-2 link-dark">Inventario<i class="fa-sharp fa-solid fa-list"></i></a></li>
           </ul>
           <div class="col-md-3 text-end">
             <a href="./html/iniciarSesion.html"><button type="button" class="btn btn-inicio">Iniciar Sesion</button></a>
