modifiacion de paginas

--- a/html/productos.html
+++ b/html/productos.html
@@ -28,7 +28,7 @@
             <li><a href="../html/inventario.html" class="nav-link px-2 link-dark">Inventario<i class="fa-sharp fa-solid fa-list"></i></a></li>
           </ul>
           <div class="col-md-3 text-end">
-            <a href="./html/iniciarSesion.html"><button type="button" class="btn btn-inicio">Iniciar Sesion</button></a>
+            <a href="../html/Sesion.html"><button type="button" class="btn btn-inicio">Iniciar Sesion</button></a>
           </div>
         </header>
             <!--barra de navegacion-->
