--- a/html/inventario.html
+++ b/html/inventario.html
@@ -28,7 +28,7 @@
             <li><a href="../html/ventas.html" class="nav-link px-2 link-dark">Ventas<i class="fa-sharp fa-solid fa-cash-register"></i></a></li>
           </ul>
           <div class="col-md-3 text-end">
-            <a href="./html/iniciarSesion.html"><button type="button" class="btn btn-inicio">Iniciar Sesion</button></a>
+            <a href="../html/Sesion.html"><button type="button" class="btn btn-inicio">Iniciar Sesion</button></a>
           </div>
         </header>
             <!--barra de navegacion-->
@@ -38,11 +38,35 @@
             <section class="text-center container banner">
               <div class="row pt-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
-                  <h1>Mundo Literario</h1>
-                  <p class="">Aplicativo web para el manejo de una papeleria,teniendo como objetivo mejorar rendimiento, ayuda a tener un inventario de productos y registro de ventas</p>
-                  <p>
-                    
-                  </p>
+                    <table class="table">
+                        <thead class="table-dark">
+                          <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">First</th>
+                            <th scope="col">Last</th>
+                            <th scope="col">Handle</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">3</th>
+                            <td colspan="2">Larry the Bird</td>
+                            <td>@twitter</td>
+                          </tr>
+                        </tbody>
+                      </table>
                 </div>
               </div>
             </section>
