--- a/html/sesion.html
+++ b/html/sesion.html
@@ -29,9 +29,9 @@
         </a>
   
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="html/productos.html" class="nav-link px-2 link-dark">Productos<i class="fa-sharp fa-solid fa-cart-shopping"></i></i></a></li>
-          <li><a href="html/ventas.html" class="nav-link px-2 link-dark">Ventas<i class="fa-sharp fa-solid fa-cash-register"></i></a></li>
-          <li><a href="html/inventario.html" class="nav-link px-2 link-dark">Inventario<i class="fa-sharp fa-solid fa-list"></i></a></li>
+            <li><a href="productos.html" class="nav-link px-2 link-dark">Productos<i class="fa-sharp fa-solid fa-cart-shopping"></i></i></a></li>
+          <li><a href="ventas.html" class="nav-link px-2 link-dark">Ventas<i class="fa-sharp fa-solid fa-cash-register"></i></a></li>
+          <li><a href="inventario.html" class="nav-link px-2 link-dark">Inventario<i class="fa-sharp fa-solid fa-list"></i></a></li>
         </ul>
         <div class="col-md-3 text-end">
           <button type="submit" class="btn btn-inicio" id="cerrar-sesion">Cerrar Sesion</button>
