--- a/html/productos.html
+++ b/html/productos.html
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <!--Libreria boostrap-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css">
 <!--fontawesome-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -37,13 +38,67 @@
             <!--Banner-->
             <section class="text-center container banner">
               <div class="row pt-lg-5">
-                <div class="col-lg-6 col-md-8 mx-auto">
-                  <h1>Mundo Literario</h1>
-                  <p class="">Aplicativo web para el manejo de una papeleria,teniendo como objetivo mejorar rendimiento, ayuda a tener un inventario de productos y registro de ventas</p>
-                  <p>
-                    
-                  </p>
-                </div>
+                <div class="col-lg-6 col-md-10 mx-auto fondo">
+                  <table id="example" class="display table" style="width: 100%;">
+                      <thead class="table-dark">
+                        <tr>
+                          <th scope="col">PRODUCTO</th>
+                          <th scope="col">CANTIDAD</th>
+                          <th scope="col">PRECIO</th>
+                          <th scope="col">AGREGAR</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Cuaderno</td>
+                          <td>3</td>
+                          <td>$3000</td>
+                          <td><button>Agregar</button></td>
+                        </tr>
+                        <tr>
+                          <td>Cuaderno</td>
+                          <td>5</td>
+                          <td>$3000</td>
+                          <td><button>Agregar</button></td>
+                        </tr>
+                        <tr>
+                          <td>libreta</td>
+                          <td>2</td>
+                          <td>$6000</td>
+                          <td><button>Agregar</button></td>
+                        </tr>
+                      </tbody>
+                    </table>
+              </div>
+              <div class="col-lg-6 col-md-10 mx-auto fondo">
+                <table  class="display table" style="width: 100%;">
+                    <thead class="table-dark">
+                      <tr>
+                        <th scope="col">PRODUCTO</th>
+                        <th scope="col">CANTIDAD</th>
+                        <th scope="col">PRECIO</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Cuaderno</td>
+                        <td>3</td>
+                        <td>$3000</td>
+                      </tr>
+                      <tr>
+                        <td>Cuaderno</td>
+                        <td>5</td>
+                        <td>$3000</td>
+                      </tr>
+                      <tr>
+                        <td>libreta</td>
+                        <td>2</td>
+                        <td>$6000</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <button type="button" class="btn btn-success">Pagar</button>
+            </div>
               </div>
             </section>
           </main>
@@ -58,6 +113,11 @@
 
 
 <!--Boostrap-->
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="../js/tabla.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
