modificacion en las tablas

--- a/html/productos.html
+++ b/html/productos.html
@@ -51,27 +51,39 @@
                       <tbody>
                         <tr>
                           <td>Cuaderno</td>
-                          <td>3</td>
+                          <td>20</td>
                           <td>$3000</td>
                           <td><button>Agregar</button></td>
                         </tr>
                         <tr>
-                          <td>Cuaderno</td>
-                          <td>5</td>
-                          <td>$3000</td>
+                          <td>Lapiz</td>
+                          <td>9</td>
+                          <td>$1500</td>
                           <td><button>Agregar</button></td>
                         </tr>
                         <tr>
                           <td>libreta</td>
-                          <td>2</td>
+                          <td>12</td>
                           <td>$6000</td>
                           <td><button>Agregar</button></td>
                         </tr>
+                        <tr>
+                          <td>Colores</td>
+                          <td>14</td>
+                          <td>$12000</td>
+                          <td><button>Agregar</button></td>
+                        </tr>
+                        <tr>
+                          <td>Borrador</td>
+                          <td>3</td>
+                          <td>$800</td>
+                          <td><button>Agregar</button></td>
                       </tbody>
                     </table>
               </div>
               <div class="col-lg-6 col-md-10 mx-auto fondo">
                 <table  class="display table" style="width: 100%;">
+                  <h1>Carrito de compra</h1>
                     <thead class="table-dark">
                       <tr>
                         <th scope="col">PRODUCTO</th>
@@ -81,19 +93,19 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td>Cuaderno</td>
-                        <td>3</td>
-                        <td>$3000</td>
-                      </tr>
-                      <tr>
-                        <td>Cuaderno</td>
-                        <td>5</td>
-                        <td>$3000</td>
+                        <td>Lapiz</td>
+                        <td>1</td>
+                        <td>$1500</td>
                       </tr>
                       <tr>
                         <td>libreta</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>$6000</td>
+                      </tr>
+                      <tr>
+                        <td>Colores</td>
+                        <td>1</td>
+                        <td>$12000</td>
                       </tr>
                     </tbody>
                   </table>
