--- a/html/ventas.html
+++ b/html/ventas.html
@@ -43,32 +43,29 @@
                           <tr>
                             <th scope="col">PRODUCTO</th>
                             <th scope="col">CANTIDAD</th>
-                            <th scope="col">RESPONSABLE</th>
                             <th scope="col">PRECIO</th>
                             <th scope="col">FECHA</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr>
-                            <td>Cuaderno</td>
-                            <td>3</td>
-                            <td>Manuel Perez</td>
-                            <td>$3000</td>
-                            <td>01/12/22</td>
-                          </tr>
-                          <tr>
-                            <td>Cuaderno</td>
-                            <td>5</td>
-                            <td>Manuel Perez</td>
-                            <td>$3000</td>
-                            <td>01/12/22</td>
+                            <td>Lapiz</td>
+                            <td>1</td>
+                            <td>$1500</td>
+                            <td>13/12/2022</td>
                           </tr>
                           <tr>
                             <td>libreta</td>
-                            <td>2</td>
-                            <td>Manuel Perez</td>
+                            <td>1</td>
                             <td>$6000</td>
-                            <td>01/12/22</td>
+                            <td>13/12/2022</td>
+                          </tr>
+                          <tr>
+                            <td>Colores</td>
+                            <td>1</td>
+                            <td>$12000</td>
+                            <td>13/12/2022</td>
+                          </tr>
                           </tr>
                         </tbody>
                       </table>
