--- a/html/inventario.html
+++ b/html/inventario.html
@@ -49,31 +49,49 @@
                           <th scope="col">MODIFICAR</th>
                         </tr>
                       </thead>
-                      
-                      <tbody>
-                        <tr>
-                          <th scope="row">1</th>
-                          <td>Cuaderno</td>
-                          <td>3</td>
-                          <td><button>Eliminar</button></td>
+                          <tbody>
+                            <tr>
+                              <td>Cuaderno</td>
+                              <td>20</td>
+                              <td>$3000</td>
+                              <td><button>Eliminar</button></td>
                           <td><button>Modificar</button></td>
-                        
-                        </tr>
-                        <tr>
-                          <th scope="row">2</th>
-                          <td>Cuaderno</td>
-                          <td>5</td>
-                          <td><button>Eliminar</button></td>
+                            </tr>
+                            <tr>
+                              <td>Lapiz</td>
+                              <td>9</td>
+                              <td>$1500</td>
+                              <td><button>Eliminar</button></td>
                           <td><button>Modificar</button></td>
-                        </tr>
-                        <tr>
-                          <th scope="row">3</th>
-                          <td>libreta</td>
-                          <td>2</td>
-                          <td><button>Eliminar</button></td>
+                            </tr>
+                            <tr>
+                              <td>libreta</td>
+                              <td>12</td>
+                              <td>$6000</td>
+                              <td><button>Eliminar</button></td>
                           <td><button>Modificar</button></td>
-                        </tr>
-                      </tbody>
+                            </tr>
+                            <tr>
+                              <td>Colores</td>
+                              <td>14</td>
+                              <td>$12000</td>
+                              <td><button>Eliminar</button></td>
+                          <td><button>Modificar</button></td>
+                            </tr>
+                            <tr>
+                              <td>Marcador</td>
+                              <td>12</td>
+                              <td>$5000</td>
+                              <td><button>Eliminar</button></td>
+                          <td><button>Modificar</button></td>
+                            </tr>
+                            <tr>
+                              <td>Borrador</td>
+                              <td>3</td>
+                              <td>$800</td>
+                              <td><button>Eliminar</button></td>
+                          <td><button>Modificar</button></td>
+                          </tbody>
                     </table>
               </div>
               </div>
